correction pour version mobile

--- a/reservia.css
+++ b/reservia.css
@@ -51,13 +51,13 @@ header
 
 #logoinscription
 {
-	margin-bottom: 6em;
+	margin-bottom: 4em;
 }
 
 
 #menu
 {
-	padding-top: 2em; 
+	padding-top: 2.5em; 
 	border-bottom: solid 8px #F2F2F2;
 }
 
@@ -98,7 +98,7 @@ nav li a:hover
 
 .trouvez
 {
-	font-size: 2.6em;
+	font-size: 1.5em;
 	line-height: 25px;
 }
 
@@ -108,7 +108,7 @@ nav li a:hover
 {
 	padding-bottom: 3%;
 	padding-top: 3%;
-	font-size: 1.5em;
+	font-size: 0.8em;
 }	
 
 
@@ -118,7 +118,7 @@ form
 {
 	display: flex;
 	font-size: 1em;
-	margin-bottom: 8%;
+	margin-bottom: 10%;
 }
 
 
@@ -197,7 +197,6 @@ form
 .titrefiltres
 {
 	margin-bottom: 3%;
-	font-size: 2.3em;
 }
 
 .filtres
@@ -252,7 +251,7 @@ form
 {
 	background-color: #DEEBFF;
 	display: inline-block;
-	width: 100px;
+	width: 120px;
 	height: 100px;
 	border-radius: 50% ;
 	text-align: center;
@@ -290,7 +289,7 @@ form
 {
 	padding-bottom: 6%;
 	padding-top: 4%;
-	font-size: 1.5em;
+	font-size: 0.8em;
 }
 	
 
@@ -303,15 +302,16 @@ form
 
 .titrehebergementpop
 {
-	margin-left: 4%;
-	font-size: 2.5em;
-
+	margin-left: 7%;
+	font-size: 1.5em;	
 }
 
 .fa-chart-line
 {
 	float: right;
-	margin-right: 4%;
+	margin-right: 6%;
+	padding-top: 1.5%;
+	font-size: 1.5em;
 }
 
 
@@ -341,14 +341,14 @@ form
 
 .populaires  p
 {
-	font-size: 2em;
+	font-size: 1.8em;
 	margin-top: 4%;
 	margin-bottom: 0;
 }
 
 .populaires .etoiles_icones
 {
-	padding-top: 22%;
+	padding-top: 40%;
 }
 
 .populaires .bleu-clair
@@ -371,8 +371,7 @@ form
 
 .titrehebergementmars
 {
-	margin-left: 4%;
-	font-size: 2.7em;
+	margin-left: 7%;
 }
 
 .cartes_hebergement
@@ -387,7 +386,7 @@ form
 .cartes_hebergement .bleu-clair
 {
 	color: #0065FC;
-	font-size: 1.5em;
+	font-size: 1.4em;
 }
 
 .cartes_hebergement .bleu-fonce
@@ -406,7 +405,7 @@ form
 
 .cartes_hebergement figcaption
 {
-	font-size: 1.3em;
+	font-size: 0.8em;
 	margin-left: 3%;
 	margin-bottom: 2%;
 	line-height: 10px;
@@ -423,16 +422,16 @@ form
 .afficherplus
 {
 	margin-left: 5%;
-	font-size: 1.9em;
+	margin-top: 10%;
 	font-weight: bold;
-	margin-top: 7%;
+	font-size: 0.8em;
 }
 
 .titreactivites
 {
 	margin-left: 5%;
-	font-size: 2em;
-	margin-top: 10%;
+	font-size: 1.5em;
+	margin-top: 13%;
 }
 
 .activites
@@ -454,7 +453,7 @@ form
 
 .activites figcaption
 {
-	font-size: 1em;
+	font-size: 0.7em;
 	margin-left: 6%;
 	padding-bottom: 3%;
 }
@@ -492,14 +491,14 @@ form
 
 #footer p
 {
-	font-size: 1.5em;
+	font-size: 0.8em;
 	line-height: 40px;
 	margin-left: 5%;
 }
 
 #footer b
 {
-	font-size: 1.5em;
+	font-size: 0.8em;
 	margin-left: 5%;
 }
 
@@ -535,7 +534,7 @@ form
 
 
 
-@media  (min-width: 699px)
+@media all and  (min-width: 699px)
 
 {
 
@@ -777,7 +776,7 @@ form
 .romanimaux
 {
 	display: inline-flex;
-	font-size: 0.33em;
+	font-size: 0.43em;
 }
 
 .romanimaux .filtres
@@ -1215,7 +1214,7 @@ div .activites
 
 
 
-@media  (min-width: 1024px)
+@media all and (min-width: 1024px)
 
 
 {
@@ -1454,7 +1453,7 @@ form
 .romanimaux
 {
 	display: inline-flex;
-	font-size: 0.33em;
+	font-size: 0.43em;
 }
 
 .romanimaux .filtres
